k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aivle-mini6-backend-service
spec:
  type: LoadBalancer
  selector:
    app: aivle-mini6-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
